# public-ops

./: .dockerignore  .gitignore  AGENTS.md  README.md  test_arbuzas_deploy_contract.sh  test_arbuzas_dns_deploy_preflight.sh  test_arbuzas_dns_frontctl_render.sh  test_arbuzas_dns_native_admin_surface.sh  test_arbuzas_dns_native_identity_surface.sh  test_arbuzas_dns_note_cleanup_contract.sh  test_arbuzas_dns_policy_contract.sh  test_arbuzas_dns_querylog_prefetch_buffer.sh  test_arbuzas_dns_repair_dns_admin_flow.sh  test_arbuzas_docker_gc.sh  test_prepare_arbuzas_adguardhome_config.sh
.github/workflows/: contracts.yml
automation/task-executor/: module.yaml
docs/: AGENT_RESOURCE_EFFICIENCY_GUIDE.md
docs/onboarding/: ADDING_A_MODULE.md
docs/runbooks/: ARBUZAS_DOCKER_PORTAINER.md  MODULE_SATIKSME_BOT.md  MODULE_SITE_NOTIFICATIONS.md  MODULE_SUBSCRIPTION_BOT.md  MODULE_TRAIN_BOT.md  ROOT_OPERATIONS.md  WORKSPACE_GARBAGE_DISPOSAL.md
infra/adguardhome/: module.yaml
ops/reports/: adguard-filtering-status.json  adguard-querylog-20260301T224042Z.json  adguard-querylog-api-20260301T234141Z.json  adguard-querylog-main-20260301T234615Z.json  adguard-querylog-sample.json  adguardhome-direct-e2e-20260301T222035Z.json  adguardhome-e2e-20260301T142120Z.json  adguardhome-e2e-20260301T144616Z.json  adguardhome-e2e-20260301T145736Z.json  adguardhome-e2e-20260301T145918Z.json  adguardhome-e2e-20260301T150054Z.json  adguardhome-e2e-20260301T150155Z.json  adguardhome-e2e-20260301T151030Z.json  adguardhome-e2e-20260301T151554Z.json  adguardhome-e2e-20260301T152052Z.json  adguardhome-e2e-20260301T152522Z.json  adguardhome-e2e-20260301T152802Z.json  adguardhome-e2e-20260301T154010Z.json  adguardhome-e2e-20260301T223437Z.json  adguardhome-e2e-20260301T224042Z.json  adguardhome-e2e-20260301T233212Z.json  adguardhome-e2e-20260302T003607Z.json  adguardhome-e2e-20260302T004307Z.json  adguardhome-e2e-20260302T004647Z.json  adguardhome-e2e-final-20260301T233730Z.json  adguardhome-e2e-main-20260301T234615Z.json  adguardhome-migration-files-20260301T142120Z.txt  lan-visibility-baseline-20260302T000015Z.json  lan-visibility-baseline-20260302T000300Z.json  listeners-20260301T142120Z.txt  listeners-20260301T152522Z.txt  listeners-20260301T231549Z.txt  (+31 more)
orchestrator/: module.yaml
tools/arbuzas-rs/: Cargo.toml
tools/arbuzas-rs/crates/arbuzas-dns/: Cargo.toml
tools/arbuzas-rs/crates/arbuzas-dns-lib/: Cargo.toml
tools/arbuzas-rs/crates/arbuzas-dns-lib/src/: config.rs
tools/arbuzas-rs/crates/arbuzas-dns/src/: ingest.rs  main.rs  native_runtime.rs  public_surface.rs  whois_cache.rs
tools/arbuzas-rs/crates/arbuzas-dns/src/identity_assets/: clients.html  overview.html  querylog.html  settings.html
(+257 files in other folders)
