[workspace]
members = [
  "crates/arbuzas-dns",
  "crates/arbuzas-dns-lib",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
hickory-proto = "0.25"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled"] }
percent-encoding = "2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zstd = "0.13"
chrono-tz = "0.10"
rustls-pemfile = "2"
