[package]
name = "arbuzas-dns"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
hickory-proto.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
notify.workspace = true
reqwest.workspace = true
rustls-pemfile.workspace = true
rusqlite.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
arbuzas-dns-lib = { path = "../arbuzas-dns-lib" }
